# aruco-detector

./: pyproject.toml
src/aruco_detector/: estimator.py  main.py
